Fix layout issues on smaller screens

--- a/Assets/Styles/base/_main.scss
+++ b/Assets/Styles/base/_main.scss
@@ -11,6 +11,9 @@ main {
     @include rem(margin-bottom, $spacing-x-large);
     margin-left: auto;
     margin-right: auto;
+    @include rem(padding-left, $spacing-default);
+    @include rem(padding-right, $spacing-default);
     position: relative;
-    @include rem(width, $layout-content-width);
+    @include rem(max-width, $layout-content-width);
+    width: 100%;
 }
